--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
       direction: rtl;
       background: var(--bg-color);
       color: var(--text-color);
-      /* overflow: hidden حذف شد تا اسکرول کلی صفحه مختل نشه */
     }
 
     #canvasBg {
@@ -75,7 +74,7 @@
       height: 100vh;
       width: 100vw;
       transition: all 0.3s ease;
-      overflow: hidden; /* اضافه شد برای جلوگیری از اسکرول ناخواسته */
+      overflow: hidden;
     }
 
     @media screen and (max-width: 768px) {
@@ -86,17 +85,20 @@
         width: 100%;
         min-width: unset;
         max-width: unset;
-        height: 30vh; /* ارتفاع مشخص برای سایدبار در موبایل */
+        height: 35vh;
         border-left: none;
         border-bottom: 1px solid #333;
-        overflow-y: auto; /* فعال کردن اسکرول عمودی */
-        -webkit-overflow-scrolling: touch; /* بهبود اسکرول لمسی */
-        overscroll-behavior: contain; /* جلوگیری از اسکرول والد */
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+        overscroll-behavior: contain;
       }
       #chatSection {
         flex: 1;
         margin: 5px 0;
-        height: 70vh; /* تنظیم ارتفاع برای بخش چت */
+        height: calc(65vh - 60px);
+      }
+      #chat {
+        max-height: calc(65vh - 120px);
       }
     }
 
@@ -109,9 +111,9 @@
         min-width: 200px;
         max-width: 400px;
         border-left: 1px solid #333;
-        overflow-y: auto; /* فعال کردن اسکرول عمودی */
-        -webkit-overflow-scrolling: touch; /* بهبود اسکرول لمسی */
-        overscroll-behavior: contain; /* جلوگیری از اسکرول والد */
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+        overscroll-behavior: contain;
       }
       #chatSection {
         margin: 5px;
@@ -150,9 +152,9 @@
       overflow-y: auto;
       padding: 20px;
       scroll-behavior: smooth;
-      -webkit-overflow-scrolling: touch; /* بهبود اسکرول لمسی */
-      overscroll-behavior: contain; /* جلوگیری از اسکرول والد */
-      max-height: calc(100vh - 150px); /* تنظیم ارتفاع برای فعال شدن اسکرول */
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: contain;
+      max-height: calc(100vh - 150px);
     }
 
     .msg {
@@ -351,8 +353,8 @@
       overflow-y: auto;
       transition: width 0.3s ease;
       resize: horizontal;
-      -webkit-overflow-scrolling: touch; /* بهبود اسکرول لمسی */
-      overscroll-behavior: contain; /* جلوگیری از اسکرول والد */
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: contain;
     }
 
     #historySidebar h3 {
@@ -586,7 +588,7 @@
   <script>
     const API_URL = "https://api.gapgpt.app/v1/chat/completions";
     const API_KEY = "sk-2AzUYsRCUcRaNNeeAcBn3rXFuAB8u1LFNBahImJnBh0EjA6W";
-    const CLOUD_API = "https://api.example.com/radbot/sync"; // جایگذاری با API واقعی
+    const CLOUD_API = "https://api.example.com/radbot/sync";
     const ENCRYPTION_KEY = "RadBotSecretKey";
     let conversations = [{ id: Date.now(), messages: [] }];
     let currentConversationId = conversations[0].id;
@@ -692,8 +694,10 @@
         const { pipeline } = await import('@xenova/transformers');
         offlineModel = await pipeline('text-generation', 'distilgpt2');
         console.log('Offline model loaded');
+        appendMessage("bot", "مدل آفلاین با موفقیت بارگذاری شد.", true);
       } catch (err) {
         console.error('Failed to load offline model:', err);
+        appendMessage("bot", `<div class="error-message">خطا در بارگذاری مدل آفلاین: ${err.message}</div>`, true);
       }
     }
 
@@ -714,6 +718,11 @@
 
     async function appendMessage(role, text, instant = false, timestamp = new Date().toLocaleString('fa-IR', { hour: '2-digit', minute: '2-digit' }), index = null) {
       const chat = document.getElementById("chat");
+      if (!chat) {
+        console.error('Chat element not found');
+        return;
+      }
+
       const msg = document.createElement("div");
       msg.className = `msg ${role} animate__animated animate__fadeIn`;
       msg.dataset.index = index !== null ? index : getCurrentConversation().messages.length;
@@ -748,7 +757,7 @@
       chat.appendChild(msg);
 
       const blocks = splitByCodeBlocks(text);
-      isTyping = !instant;
+      isTyping = !instant && !/Mobi|Android/i.test(navigator.userAgent);
       if (role === "bot") {
         document.getElementById("stopBtn").style.display = isTyping ? "block" : "none";
       }
@@ -757,7 +766,7 @@
         if (block.type === "text") {
           const markdownDiv = document.createElement("div");
           markdownDiv.className = "markdown-body";
-          if (instant) {
+          if (instant || !isTyping) {
             markdownDiv.innerHTML = marked.parse(block.content);
             msg.appendChild(markdownDiv);
           } else {
@@ -766,7 +775,7 @@
               markdownDiv.innerHTML = marked.parse(text.slice(0, i + 1));
               msg.appendChild(markdownDiv);
               await delay(15);
-              chat.scrollTop = chat.scrollHeight;
+              if (chat) chat.scrollTop = chat.scrollHeight;
             }
             if (isTyping) {
               markdownDiv.innerHTML = marked.parse(block.content);
@@ -801,12 +810,11 @@
         }
       }
 
-      chat.scrollTop = chat.scrollHeight;
+      if (chat) chat.scrollTop = chat.scrollHeight;
       if (role === "bot") {
         setInputState(true);
         isTyping = false;
         document.getElementById("stopBtn").style.display = "none";
-        showNotification("RadBot", text.slice(0, 50) + "...");
         if (speechEnabled) {
           speakText(text);
         }
@@ -859,8 +867,13 @@
     }
 
     function decryptData(data) {
-      const bytes = CryptoJS.AES.decrypt(data, ENCRYPTION_KEY);
-      return JSON.parse(bytes.toString(CryptoJS.enc.Utf8));
+      try {
+        const bytes = CryptoJS.AES.decrypt(data, ENCRYPTION_KEY);
+        return JSON.parse(bytes.toString(CryptoJS.enc.Utf8));
+      } catch (err) {
+        console.error('Decryption failed:', err);
+        return null;
+      }
     }
 
     function saveHistory() {
@@ -874,13 +887,13 @@
     function loadHistory() {
       const encrypted = localStorage.getItem("radbot-conversations");
       if (encrypted) {
-        try {
-          const compressed = decryptData(encrypted);
-          conversations = JSON.parse(LZString.decompressFromUTF16(compressed));
+        const decrypted = decryptData(encrypted);
+        if (decrypted) {
+          conversations = JSON.parse(LZString.decompressFromUTF16(decrypted));
           currentConversationId = conversations[0]?.id || Date.now();
           updateSidebar();
-        } catch (err) {
-          console.error('Failed to load history:', err);
+        } else {
+          console.error('Failed to decrypt history');
         }
       }
     }
@@ -1010,7 +1023,6 @@
       const conv = getCurrentConversation();
       conv.messages.push({ role: "user", content: message, timestamp: new Date().toLocaleString('fa-IR') });
 
-      // Check for predefined question
       if (message.trim() === "توسط چه کسی ساخته شدی") {
         const reply = "من توسط رادمهر محمدی به شماره تلفن 09173067537 ساخته شدم 😎";
         conv.messages.push({ role: "assistant", content: reply, timestamp: new Date().toLocaleString('fa-IR') });
@@ -1029,12 +1041,16 @@
           return;
         }
 
-        if (!navigator.onLine && offlineModel) {
-          const { generated_text } = await offlineModel.generate({ text: message, max_length: 50 });
-          conv.messages.push({ role: "assistant", content: generated_text, timestamp: new Date().toLocaleString('fa-IR') });
-          await appendMessage("bot", translations[currentLanguage].offline + "\n\n" + generated_text);
-          updateDocument();
-          return;
+        if (!navigator.onLine) {
+          if (offlineModel) {
+            const { generated_text } = await offlineModel.generate({ text: message, max_length: 50 });
+            conv.messages.push({ role: "assistant", content: generated_text, timestamp: new Date().toLocaleString('fa-IR') });
+            await appendMessage("bot", translations[currentLanguage].offline + "\n\n" + generated_text);
+            updateDocument();
+            return;
+          } else {
+            throw new Error("اتصال به اینترنت قطع است و مدل آفلاین در دسترس نیست.");
+          }
         }
 
         const body = {
@@ -1052,18 +1068,23 @@
         });
 
         if (!res.ok) {
-          throw new Error(`اعتبار شما تمام شد برای استفاده ی دوباره اعتبار خود را شارژکنید ${res.status}`);
+          const errorText = await res.text();
+          throw new Error(`خطای API: ${res.status} - ${errorText || "اعتبار شما تمام شد. لطفاً اعتبار خود را شارژ کنید."}`);
         }
 
         const data = await res.json();
+        if (!data.choices || !data.choices[0] || !data.choices[0].message || !data.choices[0].message.content) {
+          throw new Error("پاسخ API نامعتبر است.");
+        }
+
         const reply = data.choices[0].message.content;
         responseCache.set(cacheKey, reply);
         conv.messages.push({ role: "assistant", content: reply, timestamp: new Date().toLocaleString('fa-IR') });
         await appendMessage("bot", reply);
         updateDocument();
       } catch (err) {
-        appendMessage("bot", `<div class="error-message">${translations[currentLanguage].error}: ${err.message}</div>`);
         console.error('API error:', err);
+        appendMessage("bot", `<div class="error-message">${translations[currentLanguage].error}: ${err.message}</div>`);
       } finally {
         document.getElementById("loading").style.display = 'none';
         document.getElementById("typingIndicator").style.display = 'none';
@@ -1111,18 +1132,6 @@
         };
         suggestionsDiv.appendChild(btn);
       });
-    }
-
-    function showNotification(title, body) {
-      if (Notification.permission === "granted") {
-        new Notification(title, { body });
-      } else if (Notification.permission !== "denied") {
-        Notification.requestPermission().then(permission => {
-          if (permission === "granted") {
-            new Notification(title, { body });
-          }
-        });
-      }
     }
 
     function applyTheme(theme, accentColor = null, bgColor = null) {
@@ -1200,7 +1209,37 @@
       closeSettings();
     }
 
-    // اصلاح رویداد input برای جلوگیری از تداخل با اسکرول
+    function enhanceTouchScroll() {
+      const chat = document.getElementById("chat");
+      const historySidebar = document.getElementById("historySidebar");
+
+      function handleTouchMove(e, element) {
+        const isScrollable = element.scrollHeight > element.clientHeight;
+        if (isScrollable) {
+          const touch = e.touches[0];
+          const scrollTop = element.scrollTop;
+          const scrollHeight = element.scrollHeight;
+          const clientHeight = element.clientHeight;
+          const deltaY = touch.clientY - (element.lastTouchY || touch.clientY);
+          element.lastTouchY = touch.clientY;
+
+          if ((scrollTop === 0 && deltaY > 0) || (scrollTop + clientHeight >= scrollHeight && deltaY < 0)) {
+            e.preventDefault();
+          }
+        }
+      }
+
+      chat.addEventListener("touchstart", (e) => {
+        chat.lastTouchY = e.touches[0].clientY;
+      });
+      chat.addEventListener("touchmove", (e) => handleTouchMove(e, chat));
+
+      historySidebar.addEventListener("touchstart", (e) => {
+        historySidebar.lastTouchY = e.touches[0].clientY;
+      });
+      historySidebar.addEventListener("touchmove", (e) => handleTouchMove(e, historySidebar));
+    }
+
     document.getElementById("input").addEventListener("keydown", function (e) {
       if (e.key === "Enter" && !e.shiftKey) {
         e.preventDefault();
@@ -1228,32 +1267,18 @@
       document.getElementById("fullscreenBtn").innerHTML = document.body.classList.contains('fullscreen') ? '<i class="fas fa-compress"></i>' : '<i class="fas fa-expand"></i>';
     };
 
-    // اضافه کردن تابع برای بهبود اسکرول لمسی
-    function enhanceTouchScroll() {
-      const chat = document.getElementById("chat");
-      const historySidebar = document.getElementById("historySidebar");
-
-      // جلوگیری از تداخل اسکرول لمسی با والد
-      chat.addEventListener("touchmove", (e) => {
-        e.stopPropagation();
-      });
-      historySidebar.addEventListener("touchmove", (e) => {
-        e.stopPropagation();
-      });
-    }
-
     window.onload = () => {
       initCanvasBg();
       initOfflineModel();
       loadHistory();
       const savedTheme = localStorage.getItem("radbot-theme") || "dark";
-      const savedAccent = localStorage.getItem("radbot-accent") || "#00cccc";
+      const savedAccent = localStorage.getItem("radbot-accent") || "#00ffff";
       const savedBg = localStorage.getItem("radbot-bg") || "#121212";
       applyTheme(savedTheme, savedAccent, savedBg);
       updateLanguage(currentLanguage);
       appendMessage('bot', translations[currentLanguage].welcome);
       setTimeout(() => setInputState(true), 500);
-      enhanceTouchScroll(); // فراخوانی تابع جدید برای بهبود اسکرول لمسی
+      enhanceTouchScroll();
 
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js').catch(err => console.error('Service Worker failed:', err));
